# student_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/api/: routes.py
app/bot/: keyboards.py  runner.py
app/core/: config.py
app/ingest/: pdf_loader.py  pdf_text_utils.py  pipeline.py
app/models/: entities.py
app/rag/: embeddings.py
app/services/: coupons.py  rag_service.py  rate_limit.py  toc_service.py
artifacts/: pdf_text_diagnosis.json  phase0_curl_health.txt  phase0_docker_logs_api.txt  phase0_docker_ps.txt  phase0_env_presence.json  phase0_git_rev.txt  phase0_git_status.txt  phase1_data_quality.json  phase2_phase4_pytest_after.txt  phase2_pytest_initial.txt  phase3_e2e_simulation.json  phase4_cache_latency.json  phase4_event_logs_count.txt  phase4_logging_check.json  phase5_performance_cost.json
docs/: content_protection.md
reports/: final_report_ar_2026-02-12.md  pdf_ocr_and_reindex_results.md  pdf_text_diagnosis.md  verification_hardening_2026-02-12.md
scripts/: fetch_official_science_pdf.py  init_db.py  load_pdfs.py  pdf_text_quality_diagnosis.py  reindex_subject.py  run_pdf_ocr.py
student_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_hardening_regressions.py  test_pdf_arabic_quality.py  test_pdf_quality_and_citations.py  test_quiz_format.py  test_rag_citations.py  test_retrieval.py  test_toc.py  test_toc_service.py
