[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-bot"
version = "0.1.0"
description = "Arabic Telegram educational bot with FastAPI + Postgres + pgvector"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "aiogram>=3.10.0",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "orjson>=3.10.6",
  "python-json-logger>=2.0.7",
  "pgvector>=0.3.3",
  "numpy>=2.0.1",
  "PyMuPDF>=1.24.9",
  "pypdf>=4.3.1",
  "rapidfuzz>=3.9.6",
  "pytesseract>=0.3.10",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
